syntaxique.output
Terminals unused in grammar

   mc_try
   mc_catch
   mc_finally
   mc_abstract
   mc_new
   mc_package
   mc_import


Grammaire

    0 $accept: program $end

    1 program: class_declaration

    2 class_declaration: opt_modifiers mc_class idf opt_class_inheritance acco class_body accf

    3 opt_modifiers: /* vide */
    4              | modifiers

    5 modifiers: modifier
    6          | modifiers modifier

    7 modifier: mc_public
    8         | mc_private
    9         | mc_protected
   10         | mc_static
   11         | mc_final

   12 opt_class_inheritance: /* vide */
   13                      | inheritance_clause

   14 inheritance_clause: extends_clause
   15                   | implements_clause

   16 extends_clause: mc_extends idf

   17 implements_clause: mc_implements idf_list

   18 idf_list: idf
   19         | idf_list ',' idf

   20 class_body: /* vide */
   21           | class_member_declarations

   22 class_member_declarations: class_member_declaration
   23                          | class_member_declarations class_member_declaration

   24 constructor_declaration: opt_modifiers idf '(' parameters ')' block

   25 class_member_declaration: field_declaration
   26                         | method_declaration
   27                         | constructor_declaration

   28 field_declaration: opt_modifiers type idf ';'
   29                  | opt_modifiers type idf '=' expression ';'

   30 $@1: /* vide */

   31 method_declaration: opt_modifiers type idf '(' parameters ')' $@1 block

   32 $@2: /* vide */

   33 method_declaration: opt_modifiers mc_void mc_main '(' mc_String '[' ']' idf ')' $@2 block

   34 parameters: /* vide */
   35           | parameter_list

   36 parameter_list: parameter
   37               | parameter_list ',' parameter

   38 parameter: type idf

   39 type: mc_int
   40     | mc_float
   41     | mc_double
   42     | mc_char
   43     | mc_boolean
   44     | mc_String
   45     | mc_void
   46     | idf

   47 $@3: /* vide */

   48 block: acco $@3 statements accf

   49 statements: /* vide */
   50           | statements statement

   51 statement: declaration_statement
   52          | expression_statement
   53          | if_statement
   54          | for_statement
   55          | while_statement
   56          | return_statement
   57          | block
   58          | io_statement

   59 declaration_statement: type idf ';'
   60                      | type idf '=' expression ';'

   61 expression_statement: expression ';'

   62 if_statement: mc_if '(' expression ')' statement
   63             | mc_if '(' expression ')' statement mc_else statement

   64 $@4: /* vide */

   65 $@5: /* vide */

   66 for_statement: mc_for '(' $@4 for_init ';' for_cond ';' for_inc ')' $@5 statement

   67 for_init: declaration_statement
   68         | expression
   69         | /* vide */

   70 for_cond: expression
   71         | /* vide */

   72 for_inc: expression
   73        | /* vide */

   74 while_statement: mc_while '(' expression ')' statement

   75 return_statement: mc_return ';'
   76                 | mc_return expression ';'

   77 io_statement: mc_System '.' mc_out '.' mc_println '(' expression ')' ';'

   78 expression: assignment_expression

   79 assignment_expression: logical_expression
   80                      | idf '=' assignment_expression

   81 logical_expression: comparison_expression
   82                   | logical_expression and comparison_expression
   83                   | logical_expression or comparison_expression
   84                   | not comparison_expression

   85 comparison_expression: additive_expression
   86                      | additive_expression eq additive_expression
   87                      | additive_expression neq additive_expression
   88                      | additive_expression '<' additive_expression
   89                      | additive_expression '>' additive_expression
   90                      | additive_expression leq additive_expression
   91                      | additive_expression geq additive_expression

   92 additive_expression: multiplicative_expression
   93                    | additive_expression '+' multiplicative_expression
   94                    | additive_expression '-' multiplicative_expression

   95 multiplicative_expression: primary_expression
   96                          | multiplicative_expression '*' primary_expression
   97                          | multiplicative_expression '/' primary_expression

   98 primary_expression: idf
   99                   | entier
  100                   | chaine
  101                   | decimal
  102                   | '(' expression ')'
  103                   | primary_expression '.' idf


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'(' (40) 24 31 33 62 63 66 74 77 102
')' (41) 24 31 33 62 63 66 74 77 102
'*' (42) 96
'+' (43) 93
',' (44) 19 37
'-' (45) 94
'.' (46) 77 103
'/' (47) 97
';' (59) 28 29 59 60 61 66 75 76 77
'<' (60) 88
'=' (61) 29 60 80
'>' (62) 89
'[' (91) 33
']' (93) 33
error (256)
mc_class (258) 2
mc_extends (259) 16
mc_implements (260) 17
mc_void (261) 33 45
mc_int (262) 39
mc_String (263) 33 44
mc_return (264) 75 76
mc_if (265) 62 63
mc_else (266) 63
mc_for (267) 66
mc_while (268) 74
mc_try (269)
mc_catch (270)
mc_finally (271)
mc_public (272) 7
mc_private (273) 8
mc_protected (274) 9
mc_static (275) 10
mc_final (276) 11
mc_abstract (277)
mc_new (278)
mc_package (279)
mc_import (280)
mc_System (281) 77
mc_out (282) 77
mc_println (283) 77
mc_boolean (284) 43
mc_char (285) 42
mc_double (286) 41
mc_float (287) 40
mc_main (288) 33
acco (289) 2 48
accf (290) 2 48
geq (291) 91
leq (292) 90
eq (293) 86
neq (294) 87
and (295) 82
or (296) 83
not (297) 84
idf (298) 2 16 18 19 24 28 29 31 33 38 46 59 60 80 98 103
chaine (299) 100
entier (300) 99
decimal (301) 101
LOWER_THAN_ELSE (302)


Non-terminaux, suivis des règles où ils apparaissent

$accept (62)
    à gauche: 0
program (63)
    à gauche: 1, à droite: 0
class_declaration (64)
    à gauche: 2, à droite: 1
opt_modifiers (65)
    à gauche: 3 4, à droite: 2 24 28 29 31 33
modifiers (66)
    à gauche: 5 6, à droite: 4 6
modifier (67)
    à gauche: 7 8 9 10 11, à droite: 5 6
opt_class_inheritance (68)
    à gauche: 12 13, à droite: 2
inheritance_clause (69)
    à gauche: 14 15, à droite: 13
extends_clause (70)
    à gauche: 16, à droite: 14
implements_clause (71)
    à gauche: 17, à droite: 15
idf_list (72)
    à gauche: 18 19, à droite: 17 19
class_body (73)
    à gauche: 20 21, à droite: 2
class_member_declarations (74)
    à gauche: 22 23, à droite: 21 23
constructor_declaration (75)
    à gauche: 24, à droite: 27
class_member_declaration (76)
    à gauche: 25 26 27, à droite: 22 23
field_declaration (77)
    à gauche: 28 29, à droite: 25
method_declaration (78)
    à gauche: 31 33, à droite: 26
$@1 (79)
    à gauche: 30, à droite: 31
$@2 (80)
    à gauche: 32, à droite: 33
parameters (81)
    à gauche: 34 35, à droite: 24 31
parameter_list (82)
    à gauche: 36 37, à droite: 35 37
parameter (83)
    à gauche: 38, à droite: 36 37
type (84)
    à gauche: 39 40 41 42 43 44 45 46, à droite: 28 29 31 38 59 60
block (85)
    à gauche: 48, à droite: 24 31 33 57
$@3 (86)
    à gauche: 47, à droite: 48
statements (87)
    à gauche: 49 50, à droite: 48 50
statement (88)
    à gauche: 51 52 53 54 55 56 57 58, à droite: 50 62 63 66 74
declaration_statement (89)
    à gauche: 59 60, à droite: 51 67
expression_statement (90)
    à gauche: 61, à droite: 52
if_statement (91)
    à gauche: 62 63, à droite: 53
for_statement (92)
    à gauche: 66, à droite: 54
$@4 (93)
    à gauche: 64, à droite: 66
$@5 (94)
    à gauche: 65, à droite: 66
for_init (95)
    à gauche: 67 68 69, à droite: 66
for_cond (96)
    à gauche: 70 71, à droite: 66
for_inc (97)
    à gauche: 72 73, à droite: 66
while_statement (98)
    à gauche: 74, à droite: 55
return_statement (99)
    à gauche: 75 76, à droite: 56
io_statement (100)
    à gauche: 77, à droite: 58
expression (101)
    à gauche: 78, à droite: 29 60 61 62 63 68 70 72 74 76 77 102
assignment_expression (102)
    à gauche: 79 80, à droite: 78 80
logical_expression (103)
    à gauche: 81 82 83 84, à droite: 79 82 83
comparison_expression (104)
    à gauche: 85 86 87 88 89 90 91, à droite: 81 82 83 84
additive_expression (105)
    à gauche: 92 93 94, à droite: 85 86 87 88 89 90 91 93 94
multiplicative_expression (106)
    à gauche: 95 96 97, à droite: 92 93 94 96 97
primary_expression (107)
    à gauche: 98 99 100 101 102 103, à droite: 95 96 97 103


état 0

    0 $accept: . program $end

    mc_public     décalage et aller à l'état 1
    mc_private    décalage et aller à l'état 2
    mc_protected  décalage et aller à l'état 3
    mc_static     décalage et aller à l'état 4
    mc_final      décalage et aller à l'état 5

    $défaut  réduction par utilisation de la règle 3 (opt_modifiers)

    program            aller à l'état 6
    class_declaration  aller à l'état 7
    opt_modifiers      aller à l'état 8
    modifiers          aller à l'état 9
    modifier           aller à l'état 10


état 1

    7 modifier: mc_public .

    $défaut  réduction par utilisation de la règle 7 (modifier)


état 2

    8 modifier: mc_private .

    $défaut  réduction par utilisation de la règle 8 (modifier)


état 3

    9 modifier: mc_protected .

    $défaut  réduction par utilisation de la règle 9 (modifier)


état 4

   10 modifier: mc_static .

    $défaut  réduction par utilisation de la règle 10 (modifier)


état 5

   11 modifier: mc_final .

    $défaut  réduction par utilisation de la règle 11 (modifier)


état 6

    0 $accept: program . $end

    $end  décalage et aller à l'état 11


état 7

    1 program: class_declaration .

    $défaut  réduction par utilisation de la règle 1 (program)


état 8

    2 class_declaration: opt_modifiers . mc_class idf opt_class_inheritance acco class_body accf

    mc_class  décalage et aller à l'état 12


état 9

    4 opt_modifiers: modifiers .
    6 modifiers: modifiers . modifier

    mc_public     décalage et aller à l'état 1
    mc_private    décalage et aller à l'état 2
    mc_protected  décalage et aller à l'état 3
    mc_static     décalage et aller à l'état 4
    mc_final      décalage et aller à l'état 5

    $défaut  réduction par utilisation de la règle 4 (opt_modifiers)

    modifier  aller à l'état 13


état 10

    5 modifiers: modifier .

    $défaut  réduction par utilisation de la règle 5 (modifiers)


état 11

    0 $accept: program $end .

    $défaut  accepter


état 12

    2 class_declaration: opt_modifiers mc_class . idf opt_class_inheritance acco class_body accf

    idf  décalage et aller à l'état 14


état 13

    6 modifiers: modifiers modifier .

    $défaut  réduction par utilisation de la règle 6 (modifiers)


état 14

    2 class_declaration: opt_modifiers mc_class idf . opt_class_inheritance acco class_body accf

    mc_extends     décalage et aller à l'état 15
    mc_implements  décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 12 (opt_class_inheritance)

    opt_class_inheritance  aller à l'état 17
    inheritance_clause     aller à l'état 18
    extends_clause         aller à l'état 19
    implements_clause      aller à l'état 20


état 15

   16 extends_clause: mc_extends . idf

    idf  décalage et aller à l'état 21


état 16

   17 implements_clause: mc_implements . idf_list

    idf  décalage et aller à l'état 22

    idf_list  aller à l'état 23


état 17

    2 class_declaration: opt_modifiers mc_class idf opt_class_inheritance . acco class_body accf

    acco  décalage et aller à l'état 24


état 18

   13 opt_class_inheritance: inheritance_clause .

    $défaut  réduction par utilisation de la règle 13 (opt_class_inheritance)


état 19

   14 inheritance_clause: extends_clause .

    $défaut  réduction par utilisation de la règle 14 (inheritance_clause)


état 20

   15 inheritance_clause: implements_clause .

    $défaut  réduction par utilisation de la règle 15 (inheritance_clause)


état 21

   16 extends_clause: mc_extends idf .

    $défaut  réduction par utilisation de la règle 16 (extends_clause)


état 22

   18 idf_list: idf .

    $défaut  réduction par utilisation de la règle 18 (idf_list)


état 23

   17 implements_clause: mc_implements idf_list .
   19 idf_list: idf_list . ',' idf

    ','  décalage et aller à l'état 25

    $défaut  réduction par utilisation de la règle 17 (implements_clause)


état 24

    2 class_declaration: opt_modifiers mc_class idf opt_class_inheritance acco . class_body accf

    mc_public     décalage et aller à l'état 1
    mc_private    décalage et aller à l'état 2
    mc_protected  décalage et aller à l'état 3
    mc_static     décalage et aller à l'état 4
    mc_final      décalage et aller à l'état 5

    accf     réduction par utilisation de la règle 20 (class_body)
    $défaut  réduction par utilisation de la règle 3 (opt_modifiers)

    opt_modifiers              aller à l'état 26
    modifiers                  aller à l'état 9
    modifier                   aller à l'état 10
    class_body                 aller à l'état 27
    class_member_declarations  aller à l'état 28
    constructor_declaration    aller à l'état 29
    class_member_declaration   aller à l'état 30
    field_declaration          aller à l'état 31
    method_declaration         aller à l'état 32


état 25

   19 idf_list: idf_list ',' . idf

    idf  décalage et aller à l'état 33


état 26

   24 constructor_declaration: opt_modifiers . idf '(' parameters ')' block
   28 field_declaration: opt_modifiers . type idf ';'
   29                  | opt_modifiers . type idf '=' expression ';'
   31 method_declaration: opt_modifiers . type idf '(' parameters ')' $@1 block
   33                   | opt_modifiers . mc_void mc_main '(' mc_String '[' ']' idf ')' $@2 block

    mc_void     décalage et aller à l'état 34
    mc_int      décalage et aller à l'état 35
    mc_String   décalage et aller à l'état 36
    mc_boolean  décalage et aller à l'état 37
    mc_char     décalage et aller à l'état 38
    mc_double   décalage et aller à l'état 39
    mc_float    décalage et aller à l'état 40
    idf         décalage et aller à l'état 41

    type  aller à l'état 42


état 27

    2 class_declaration: opt_modifiers mc_class idf opt_class_inheritance acco class_body . accf

    accf  décalage et aller à l'état 43


état 28

   21 class_body: class_member_declarations .
   23 class_member_declarations: class_member_declarations . class_member_declaration

    mc_public     décalage et aller à l'état 1
    mc_private    décalage et aller à l'état 2
    mc_protected  décalage et aller à l'état 3
    mc_static     décalage et aller à l'état 4
    mc_final      décalage et aller à l'état 5

    accf     réduction par utilisation de la règle 21 (class_body)
    $défaut  réduction par utilisation de la règle 3 (opt_modifiers)

    opt_modifiers             aller à l'état 26
    modifiers                 aller à l'état 9
    modifier                  aller à l'état 10
    constructor_declaration   aller à l'état 29
    class_member_declaration  aller à l'état 44
    field_declaration         aller à l'état 31
    method_declaration        aller à l'état 32


état 29

   27 class_member_declaration: constructor_declaration .

    $défaut  réduction par utilisation de la règle 27 (class_member_declaration)


état 30

   22 class_member_declarations: class_member_declaration .

    $défaut  réduction par utilisation de la règle 22 (class_member_declarations)


état 31

   25 class_member_declaration: field_declaration .

    $défaut  réduction par utilisation de la règle 25 (class_member_declaration)


état 32

   26 class_member_declaration: method_declaration .

    $défaut  réduction par utilisation de la règle 26 (class_member_declaration)


état 33

   19 idf_list: idf_list ',' idf .

    $défaut  réduction par utilisation de la règle 19 (idf_list)


état 34

   33 method_declaration: opt_modifiers mc_void . mc_main '(' mc_String '[' ']' idf ')' $@2 block
   45 type: mc_void .

    mc_main  décalage et aller à l'état 45

    $défaut  réduction par utilisation de la règle 45 (type)


état 35

   39 type: mc_int .

    $défaut  réduction par utilisation de la règle 39 (type)


état 36

   44 type: mc_String .

    $défaut  réduction par utilisation de la règle 44 (type)


état 37

   43 type: mc_boolean .

    $défaut  réduction par utilisation de la règle 43 (type)


état 38

   42 type: mc_char .

    $défaut  réduction par utilisation de la règle 42 (type)


état 39

   41 type: mc_double .

    $défaut  réduction par utilisation de la règle 41 (type)


état 40

   40 type: mc_float .

    $défaut  réduction par utilisation de la règle 40 (type)


état 41

   24 constructor_declaration: opt_modifiers idf . '(' parameters ')' block
   46 type: idf .

    '('  décalage et aller à l'état 46

    $défaut  réduction par utilisation de la règle 46 (type)


état 42

   28 field_declaration: opt_modifiers type . idf ';'
   29                  | opt_modifiers type . idf '=' expression ';'
   31 method_declaration: opt_modifiers type . idf '(' parameters ')' $@1 block

    idf  décalage et aller à l'état 47


état 43

    2 class_declaration: opt_modifiers mc_class idf opt_class_inheritance acco class_body accf .

    $défaut  réduction par utilisation de la règle 2 (class_declaration)


état 44

   23 class_member_declarations: class_member_declarations class_member_declaration .

    $défaut  réduction par utilisation de la règle 23 (class_member_declarations)


état 45

   33 method_declaration: opt_modifiers mc_void mc_main . '(' mc_String '[' ']' idf ')' $@2 block

    '('  décalage et aller à l'état 48


état 46

   24 constructor_declaration: opt_modifiers idf '(' . parameters ')' block

    mc_void     décalage et aller à l'état 49
    mc_int      décalage et aller à l'état 35
    mc_String   décalage et aller à l'état 36
    mc_boolean  décalage et aller à l'état 37
    mc_char     décalage et aller à l'état 38
    mc_double   décalage et aller à l'état 39
    mc_float    décalage et aller à l'état 40
    idf         décalage et aller à l'état 50

    $défaut  réduction par utilisation de la règle 34 (parameters)

    parameters      aller à l'état 51
    parameter_list  aller à l'état 52
    parameter       aller à l'état 53
    type            aller à l'état 54


état 47

   28 field_declaration: opt_modifiers type idf . ';'
   29                  | opt_modifiers type idf . '=' expression ';'
   31 method_declaration: opt_modifiers type idf . '(' parameters ')' $@1 block

    '='  décalage et aller à l'état 55
    '('  décalage et aller à l'état 56
    ';'  décalage et aller à l'état 57


état 48

   33 method_declaration: opt_modifiers mc_void mc_main '(' . mc_String '[' ']' idf ')' $@2 block

    mc_String  décalage et aller à l'état 58


état 49

   45 type: mc_void .

    $défaut  réduction par utilisation de la règle 45 (type)


état 50

   46 type: idf .

    $défaut  réduction par utilisation de la règle 46 (type)


état 51

   24 constructor_declaration: opt_modifiers idf '(' parameters . ')' block

    ')'  décalage et aller à l'état 59


état 52

   35 parameters: parameter_list .
   37 parameter_list: parameter_list . ',' parameter

    ','  décalage et aller à l'état 60

    $défaut  réduction par utilisation de la règle 35 (parameters)


état 53

   36 parameter_list: parameter .

    $défaut  réduction par utilisation de la règle 36 (parameter_list)


état 54

   38 parameter: type . idf

    idf  décalage et aller à l'état 61


état 55

   29 field_declaration: opt_modifiers type idf '=' . expression ';'

    not      décalage et aller à l'état 62
    idf      décalage et aller à l'état 63
    chaine   décalage et aller à l'état 64
    entier   décalage et aller à l'état 65
    decimal  décalage et aller à l'état 66
    '('      décalage et aller à l'état 67

    expression                 aller à l'état 68
    assignment_expression      aller à l'état 69
    logical_expression         aller à l'état 70
    comparison_expression      aller à l'état 71
    additive_expression        aller à l'état 72
    multiplicative_expression  aller à l'état 73
    primary_expression         aller à l'état 74


état 56

   31 method_declaration: opt_modifiers type idf '(' . parameters ')' $@1 block

    mc_void     décalage et aller à l'état 49
    mc_int      décalage et aller à l'état 35
    mc_String   décalage et aller à l'état 36
    mc_boolean  décalage et aller à l'état 37
    mc_char     décalage et aller à l'état 38
    mc_double   décalage et aller à l'état 39
    mc_float    décalage et aller à l'état 40
    idf         décalage et aller à l'état 50

    $défaut  réduction par utilisation de la règle 34 (parameters)

    parameters      aller à l'état 75
    parameter_list  aller à l'état 52
    parameter       aller à l'état 53
    type            aller à l'état 54


état 57

   28 field_declaration: opt_modifiers type idf ';' .

    $défaut  réduction par utilisation de la règle 28 (field_declaration)


état 58

   33 method_declaration: opt_modifiers mc_void mc_main '(' mc_String . '[' ']' idf ')' $@2 block

    '['  décalage et aller à l'état 76


état 59

   24 constructor_declaration: opt_modifiers idf '(' parameters ')' . block

    acco  décalage et aller à l'état 77

    block  aller à l'état 78


état 60

   37 parameter_list: parameter_list ',' . parameter

    mc_void     décalage et aller à l'état 49
    mc_int      décalage et aller à l'état 35
    mc_String   décalage et aller à l'état 36
    mc_boolean  décalage et aller à l'état 37
    mc_char     décalage et aller à l'état 38
    mc_double   décalage et aller à l'état 39
    mc_float    décalage et aller à l'état 40
    idf         décalage et aller à l'état 50

    parameter  aller à l'état 79
    type       aller à l'état 54


état 61

   38 parameter: type idf .

    $défaut  réduction par utilisation de la règle 38 (parameter)


état 62

   84 logical_expression: not . comparison_expression

    idf      décalage et aller à l'état 80
    chaine   décalage et aller à l'état 64
    entier   décalage et aller à l'état 65
    decimal  décalage et aller à l'état 66
    '('      décalage et aller à l'état 67

    comparison_expression      aller à l'état 81
    additive_expression        aller à l'état 72
    multiplicative_expression  aller à l'état 73
    primary_expression         aller à l'état 74


état 63

   80 assignment_expression: idf . '=' assignment_expression
   98 primary_expression: idf .

    '='  décalage et aller à l'état 82

    $défaut  réduction par utilisation de la règle 98 (primary_expression)


état 64

  100 primary_expression: chaine .

    $défaut  réduction par utilisation de la règle 100 (primary_expression)


état 65

   99 primary_expression: entier .

    $défaut  réduction par utilisation de la règle 99 (primary_expression)


état 66

  101 primary_expression: decimal .

    $défaut  réduction par utilisation de la règle 101 (primary_expression)


état 67
